@@ -13,10 +13,9 @@ package org.eclipse.milo.examples.client;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
-import com.google.common.collect.ImmutableList;
 import org.eclipse.milo.opcua.sdk.client.OpcUaClient;
 import org.eclipse.milo.opcua.sdk.client.nodes.UaVariableNode;
-import org.eclipse.milo.opcua.stack.core.Identifiers;
+import org.eclipse.milo.opcua.stack.core.NodeIds;
 import org.eclipse.milo.opcua.stack.core.types.builtin.DataValue;
 import org.eclipse.milo.opcua.stack.core.types.builtin.NodeId;
 import org.eclipse.milo.opcua.stack.core.types.enumerated.ServerState;
@@ -40,7 +39,7 @@ public class ReadExample implements ClientExample {
         client.connect().get();
 
         // synchronous read request via VariableNode
-        UaVariableNode node = client.getAddressSpace().getVariableNode(Identifiers.Server_ServerStatus_StartTime);
+        UaVariableNode node = client.getAddressSpace().getVariableNode(NodeIds.Server_ServerStatus_StartTime);
         DataValue value = node.readValue();
 
         logger.info("StartTime={}", value.getValue().getValue());
@@ -58,9 +57,10 @@ public class ReadExample implements ClientExample {
     }
 
     private CompletableFuture<List<DataValue>> readServerStateAndTime(OpcUaClient client) {
-        List<NodeId> nodeIds = ImmutableList.of(
-            Identifiers.Server_ServerStatus_State,
-            Identifiers.Server_ServerStatus_CurrentTime);
+        List<NodeId> nodeIds = List.of(
+            NodeIds.Server_ServerStatus_State,
+            NodeIds.Server_ServerStatus_CurrentTime
+        );
 
         return client.readValues(0.0, TimestampsToReturn.Both, nodeIds);
     }
