@@ -24,8 +24,6 @@ import org.eclipse.milo.opcua.stack.core.UaException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static com.google.common.collect.Sets.newHashSet;
-
 class OpcUaCertificateUsageChecker extends PKIXCertPathChecker {
 
     private static final Logger LOGGER =
@@ -62,7 +60,7 @@ class OpcUaCertificateUsageChecker extends PKIXCertPathChecker {
 
     @Override
     public Set<String> getSupportedExtensions() {
-        return Collections.unmodifiableSet(newHashSet(KEY_USAGE_OID, EXTENDED_KEY_USAGE_OID));
+        return Set.of(KEY_USAGE_OID, EXTENDED_KEY_USAGE_OID);
     }
 
     @Override
